// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`follow-imports button-default-export.js 1`] = `Object {}`;

exports[`follow-imports button-from-node-nodules.js 1`] = `
Object {
  "exportedAs": "PropsTable",
  "filePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "from": "@component-controls/storybook",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 47,
    },
    "start": Object {
      "column": 19,
      "line": 44,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "source": "'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var React = require('react');
var React__default = _interopDefault(React);
var blocks = require('@component-controls/blocks');
var live_store = require('@component-controls/store/live_store');
var storybookCustomDocs = require('@component-controls/storybook-custom-docs');
var DocsContainer = require('./DocsContainer.js');

const BlockContextProvider = ({ children, id, }) => {
    const { storyId: defaultStoyId, docId } = storybookCustomDocs.useCurrentData();
    const storyId = id ? id : defaultStoyId;
    return (React__default.createElement(blocks.BlockContextProvider, { store: live_store.store, storyId: storyId, docId: docId }, children));
};

const ControlsProvider = ({ children }) => {
    return React__default.createElement(BlockContextProvider, null, children);
};

const ComponentSource = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.ComponentSource, Object.assign({}, props))));
};

const Description = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Description, Object.assign({}, props))));
};

/**
 * empty component for storybook addon-docs compatibility
 */
const Meta = () => null;

const Playground = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Playground, Object.assign({}, props))));
};

const PropsTable = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.PropsTable, Object.assign({}, props))));
};

const Stories = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Stories, Object.assign({}, props))));
};

const Story = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Story, Object.assign({}, props))));
};

const StoryConfig = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.StoryConfig, Object.assign({}, props))));
};

const StorySource = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.StorySource, Object.assign({}, props))));
};

const Subtitle = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Subtitle, Object.assign({}, props))));
};

const Title = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Title, Object.assign({}, props))));
};

const ThemeProvider = ({ children }) => {
    return React__default.createElement(blocks.ThemeProvider, null, children);
};

exports.DocsContainer = DocsContainer.DocsContainer;
exports.PageContextContainer = DocsContainer.PageContextContainer;
exports.BlockContextProvider = BlockContextProvider;
exports.ComponentSource = ComponentSource;
exports.ControlsProvider = ControlsProvider;
exports.Description = Description;
exports.Meta = Meta;
exports.Playground = Playground;
exports.PropsTable = PropsTable;
exports.Stories = Stories;
exports.Story = Story;
exports.StoryConfig = StoryConfig;
exports.StorySource = StorySource;
exports.Subtitle = Subtitle;
exports.ThemeProvider = ThemeProvider;
exports.Title = Title;
",
}
`;

exports[`follow-imports button-named-export.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 22,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports cjs-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/exports/cjs-named-export.js",
  "from": "../exports/cjs-named-export",
  "importedName": "Button",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 23,
      "line": 1,
    },
    "start": Object {
      "column": 15,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/exports/cjs-named-export.js",
  "source": "const Button = () => {};
exports.Button = Button;
",
}
`;

exports[`follow-imports direct-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/direct-import.js",
  "from": "",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 22,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/direct-import.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports export-all.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 22,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports import-node-modules.js 1`] = `
Object {
  "exportedAs": "PropsTable",
  "filePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "from": "./button-from-node-nodules",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 47,
    },
    "start": Object {
      "column": 19,
      "line": 44,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "source": "'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var React = require('react');
var React__default = _interopDefault(React);
var blocks = require('@component-controls/blocks');
var live_store = require('@component-controls/store/live_store');
var storybookCustomDocs = require('@component-controls/storybook-custom-docs');
var DocsContainer = require('./DocsContainer.js');

const BlockContextProvider = ({ children, id, }) => {
    const { storyId: defaultStoyId, docId } = storybookCustomDocs.useCurrentData();
    const storyId = id ? id : defaultStoyId;
    return (React__default.createElement(blocks.BlockContextProvider, { store: live_store.store, storyId: storyId, docId: docId }, children));
};

const ControlsProvider = ({ children }) => {
    return React__default.createElement(BlockContextProvider, null, children);
};

const ComponentSource = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.ComponentSource, Object.assign({}, props))));
};

const Description = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Description, Object.assign({}, props))));
};

/**
 * empty component for storybook addon-docs compatibility
 */
const Meta = () => null;

const Playground = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Playground, Object.assign({}, props))));
};

const PropsTable = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.PropsTable, Object.assign({}, props))));
};

const Stories = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Stories, Object.assign({}, props))));
};

const Story = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Story, Object.assign({}, props))));
};

const StoryConfig = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.StoryConfig, Object.assign({}, props))));
};

const StorySource = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.StorySource, Object.assign({}, props))));
};

const Subtitle = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Subtitle, Object.assign({}, props))));
};

const Title = props => {
    return (React__default.createElement(ControlsProvider, null,
        React__default.createElement(blocks.Title, Object.assign({}, props))));
};

const ThemeProvider = ({ children }) => {
    return React__default.createElement(blocks.ThemeProvider, null, children);
};

exports.DocsContainer = DocsContainer.DocsContainer;
exports.PageContextContainer = DocsContainer.PageContextContainer;
exports.BlockContextProvider = BlockContextProvider;
exports.ComponentSource = ComponentSource;
exports.ControlsProvider = ControlsProvider;
exports.Description = Description;
exports.Meta = Meta;
exports.Playground = Playground;
exports.PropsTable = PropsTable;
exports.Stories = Stories;
exports.Story = Story;
exports.StoryConfig = StoryConfig;
exports.StorySource = StorySource;
exports.Subtitle = Subtitle;
exports.ThemeProvider = ThemeProvider;
exports.Title = Title;
",
}
`;

exports[`follow-imports index.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "./button-named-export",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 22,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports one-level-default-import.js 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
  "from": "./button-default-export",
  "importedName": "default",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 24,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
  "source": "export default () => {};
",
}
`;

exports[`follow-imports one-level-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "./button-named-export",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 22,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports one-level-index-import.js 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "from": "./",
  "importedName": "Button",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 22,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports one-level-namespace-import.js 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
  "from": "./button-default-export",
  "importedName": "namespace",
  "imports": Object {},
  "loc": Object {
    "end": Object {
      "column": 24,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/fixtures/follow-imports/button-default-export.js",
  "source": "export default () => {};
",
}
`;
